--- a/.github/workflows/schedule_data_scraping.yml
+++ b/.github/workflows/schedule_data_scraping.yml
@@ -3,6 +3,7 @@ name: Scheduled Web Scraping
 on:
   schedule:
     - cron: '0 0 * * *'  # Runs every day at midnight UTC
+  workflow_dispatch:
 
 jobs:
   scrape_job:
