--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,4 @@
+annotated-types==0.7.0
 anyio==4.6.0
 argon2-cffi==23.1.0
 argon2-cffi-bindings==21.2.0
@@ -18,6 +19,7 @@ cycler==0.12.1
 debugpy==1.8.6
 decorator==5.1.1
 defusedxml==0.7.1
+distro==1.9.0
 dnspython==2.7.0
 executing==2.1.0
 fastjsonschema==2.20.0
@@ -33,13 +35,16 @@ httpx==0.27.2
 idna==3.10
 ipykernel==6.29.5
 ipython==8.27.0
+isodate==0.7.2
 isoduration==20.11.0
 jedi==0.19.1
 Jinja2==3.1.4
+jiter==0.7.0
 joblib==1.4.2
 json5==0.9.25
 jsonpointer==3.0.0
 jsonschema==4.23.0
+jsonschema-path==0.3.3
 jsonschema-specifications==2023.12.1
 jupyter-events==0.10.0
 jupyter-lsp==2.2.5
@@ -53,10 +58,12 @@ jupyterlab_git==0.50.1
 jupyterlab_pygments==0.3.0
 jupyterlab_server==2.27.3
 kiwisolver==1.4.7
+lazy-object-proxy==1.10.0
 MarkupSafe==2.1.5
 matplotlib==3.9.2
 matplotlib-inline==0.1.7
 mistune==3.0.2
+more-itertools==10.5.0
 mpmath==1.3.0
 nbclient==0.10.0
 nbconvert==7.16.4
@@ -66,11 +73,17 @@ nest-asyncio==1.6.0
 networkx==3.2.1
 notebook_shim==0.2.4
 numpy==2.1.1
+openai==1.54.3
+openapi-core==0.19.4
+openapi-schema-validator==0.6.2
+openapi-spec-validator==0.7.1
 overrides==7.7.0
 packaging==24.1
 pandas==2.2.3
 pandocfilters==1.5.1
+parse==1.20.2
 parso==0.8.4
+pathable==0.4.3
 pexpect==4.9.0
 pillow==10.4.0
 platformdirs==4.3.6
@@ -81,6 +94,8 @@ psutil==6.0.0
 ptyprocess==0.7.0
 pure_eval==0.2.3
 pycparser==2.22
+pydantic==2.9.2
+pydantic_core==2.23.4
 Pygments==2.18.0
 pymongo==4.10.1
 pyparsing==3.1.4
@@ -111,9 +126,10 @@ terminado==0.18.1
 threadpoolctl==3.5.0
 tinycss2==1.3.0
 tornado==6.4.1
+tqdm==4.67.0
 traitlets==5.14.3
 types-python-dateutil==2.9.0.20240906
-typing_extensions==4.9.0
+typing_extensions==4.12.2
 tzdata==2024.2
 uri-template==1.3.0
 urllib3==2.2.3
@@ -121,3 +137,4 @@ wcwidth==0.2.13
 webcolors==24.8.0
 webencodings==0.5.1
 websocket-client==1.8.0
+Werkzeug==3.1.3
