cleaning up schedule file

--- a/.github/workflows/schedule_vector_store_update.yml
+++ b/.github/workflows/schedule_vector_store_update.yml
@@ -27,6 +27,6 @@ jobs:
           python -m pip install --upgrade pip
           pip install -r requirements.txt  # Ensure you have a requirements.txt file
 
-      - name: Run scraping script
+      - name: Run vector store update script
         run: |
           python backend/scripts/update_vector_store.py
