updating scraping schdule to include vector store update

--- a/.github/workflows/schedule_data_scraping.yml
+++ b/.github/workflows/schedule_data_scraping.yml
@@ -11,6 +11,7 @@ jobs:
 
     env:
       MONGODB_URI: ${{ secrets.MONGODB_URI }}
+      OPENAI_API_KEY: ${{ secrets.OPENAI_API_KEY }}
 
     steps:
       - name: Check out repository
@@ -29,3 +30,7 @@ jobs:
       - name: Run scraping script
         run: |
           python backend/scripts/pull.py
+          
+      - name: Run vector store update script
+        run: |
+          python backend/scripts/update_vector_store.py
