--- a/backend/package.json
+++ b/backend/package.json
@@ -1,17 +1,17 @@
 {
   "name": "backend",
   "version": "1.0.0",
-  "main": "analyze.js",
   "type": "module",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node server.js"
   },
   "keywords": [],
-  "author": "",
+  "author": "Laney Marsh",
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "cheerio": "^1.0.0",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.21.1",
